# pico-eink

./: CMakeLists.txt  data.h  main.c
display/: CMakeLists.txt  updateDisplay.c  updateDisplay.h
einkt/: CMakeLists.txt  EPD_7in5_V2.c  EPD_7in5_V2.h  Gui.c  Gui.h  image.h
einkt/Fonts/: CMakeLists.txt  FreeSerif32pt7b.h  Open_Sans_Regular_32.h  font.h  gfxfont.h  times_ro28pt7b.h  times_ro32pt7b.h
examples/: EPD_7in5_V2_test.c
lib/Fonts/: CMakeLists.txt  font24.c
lib/e-Paper/: EPD_7in5_V2.c  EPD_7in5_V2.h
rtc/: CMakeLists.txt  DS1307.c  DS1307.h  timeData.h
sensor/: CMakeLists.txt  bme680_spi.c  bme680_spi.h  sensorData.h
